--- a/.github/workflows/azureapp.yml
+++ b/.github/workflows/azureapp.yml
@@ -47,5 +47,5 @@ jobs:
             --version-name $TAG_NAME \
             --location uksouth \
             --package-file-link "https://benchlabtestappstorage.blob.core.windows.net/testapp/app-$TAG_NAME.zip" \
-            --install-command "unzip -o app-$TAG_NAME.zip && chmod +x install.sh && ./install.sh" \
+            --install-command "apt-get update && apt-get install -y unzip && unzip -o app-$TAG_NAME.zip && chmod +x install.sh && ./install.sh" \
             --remove-command "./uninstall.sh"
