--- a/.github/workflows/azureapp.yml
+++ b/.github/workflows/azureapp.yml
@@ -19,7 +19,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Create Zip of azure directory
-      run: zip -r app.zip azure/
+      run: zip -r app.zip -x .git/\* -x .github/\*
 
     - name: Upload Zip to Azure Storage
       uses: azure/cli@v2
@@ -47,5 +47,5 @@ jobs:
             --version-name $TAG_NAME \
             --location uksouth \
             --package-file-link "https://benchlabtestappstorage.blob.core.windows.net/testapp/app-$TAG_NAME.zip" \
-            --install-command "apt-get update && apt-get install -y unzip && unzip -o app-$TAG_NAME.zip && chmod +x install.sh && ./install.sh" \
-            --remove-command "./uninstall.sh"
+            --install-command "apt-get update && apt-get install -y unzip && unzip -o app-$TAG_NAME.zip && chmod +x azure/install.sh && ./azure/install.sh" \
+            --remove-command "chmod +x azure/uninstall.sh && ./azure/uninstall.sh"
