--- a/.github/workflows/azureapp.yml
+++ b/.github/workflows/azureapp.yml
@@ -47,5 +47,5 @@ jobs:
             --version-name $TAG_NAME \
             --location ${{ vars.AZURE_LOCATION }} \
             --package-file-link "https://${{ vars.AZURE_APP_STORAGE }}.blob.core.windows.net/${{ vars.AZURE_APP_STORAGE_CONTAINER }}/app-$TAG_NAME.zip" \
-            --install-command "apt-get update && apt-get install -y unzip && unzip -o app-$TAG_NAME.zip && chmod +x azure/install.sh && ./azure/install.sh" \
+            --install-command "apt-get install -y unzip && unzip -o app-$TAG_NAME.zip && chmod +x azure/install.sh && ./azure/install.sh" \
             --remove-command "chmod +x azure/uninstall.sh && ./azure/uninstall.sh"
